--- a/.env
+++ b/.env
@@ -1,139 +1,142 @@
-# Environment Configuration Examples
 
-## Development (Stub Providers)
+GEMINI_API_KEY=AIzaSyCE_VhOAE4qCkXpxbyzWQfMLDJrCcwEa7Q
 
-```bash
-# .env.dev
-PORT=8080
-ENV=dev
+# # Environment Configuration Examples
 
-LLM_PROVIDER=stub
-OCR_PROVIDER=stub
+# ## Development (Stub Providers)
 
-JOB_QUEUE_SIZE=100
-JOB_WORKERS=2
+# ```bash
+# # .env.dev
+# PORT=8080
+# ENV=dev
 
-TIMEOUT_SYNC_PROCESS=4s
-TIMEOUT_INK_RECOGNIZE=8s
-TIMEOUT_LLM_REQUEST=20s
-```
+# LLM_PROVIDER=stub
+# OCR_PROVIDER=stub
 
-## Production - OpenAI + Azure Ink Recognizer
+# JOB_QUEUE_SIZE=100
+# JOB_WORKERS=2
 
-```bash
-# .env.prod
-PORT=8080
-ENV=prod
+# TIMEOUT_SYNC_PROCESS=4s
+# TIMEOUT_INK_RECOGNIZE=8s
+# TIMEOUT_LLM_REQUEST=20s
+# ```
 
-LLM_PROVIDER=openai
-LLM_API_KEY=sk-proj-xxxxx...
-LLM_BASE_URL=https://api.openai.com/v1
-LLM_MODEL=gpt-4-turbo
-LLM_TIMEOUT=20s
+# ## Production - OpenAI + Azure Ink Recognizer
 
-OCR_PROVIDER=azure
-OCR_API_KEY=xxxxxxxxxxxxxxxx
-OCR_BASE_URL=https://westus.api.cognitive.microsoft.com/inkrecognizer
-OCR_TIMEOUT=8s
+# ```bash
+# # .env.prod
+# PORT=8080
+# ENV=prod
 
-JOB_QUEUE_SIZE=1000
-JOB_WORKERS=4
-JOB_MAX_RETRIES=3
-JOB_RETRY_BACKOFF=2s
+# LLM_PROVIDER=openai
+# LLM_API_KEY=sk-proj-xxxxx...
+# LLM_BASE_URL=https://api.openai.com/v1
+# LLM_MODEL=gpt-4-turbo
+# LLM_TIMEOUT=20s
 
-TIMEOUT_SYNC_PROCESS=4s
-TIMEOUT_INK_RECOGNIZE=8s
-TIMEOUT_LLM_REQUEST=20s
-```
+# OCR_PROVIDER=azure
+# OCR_API_KEY=xxxxxxxxxxxxxxxx
+# OCR_BASE_URL=https://westus.api.cognitive.microsoft.com/inkrecognizer
+# OCR_TIMEOUT=8s
 
-## Production - Qwen + MyScript
+# JOB_QUEUE_SIZE=1000
+# JOB_WORKERS=4
+# JOB_MAX_RETRIES=3
+# JOB_RETRY_BACKOFF=2s
 
-```bash
-# .env.qwen
-PORT=8080
-ENV=prod
+# TIMEOUT_SYNC_PROCESS=4s
+# TIMEOUT_INK_RECOGNIZE=8s
+# TIMEOUT_LLM_REQUEST=20s
+# ```
 
-LLM_PROVIDER=qwen
-LLM_API_KEY=sk-xxxxx...
-LLM_BASE_URL=https://dashscope.aliyuncs.com/api/v1
-LLM_MODEL=qwen-max
-LLM_TIMEOUT=20s
+# ## Production - Qwen + MyScript
 
-OCR_PROVIDER=myscript
-OCR_API_KEY=xxxxx
-OCR_BASE_URL=https://api.myscript.com
-OCR_TIMEOUT=10s
+# ```bash
+# # .env.qwen
+# PORT=8080
+# ENV=prod
 
-JOB_QUEUE_SIZE=1000
-JOB_WORKERS=4
-```
+# LLM_PROVIDER=qwen
+# LLM_API_KEY=sk-xxxxx...
+# LLM_BASE_URL=https://dashscope.aliyuncs.com/api/v1
+# LLM_MODEL=qwen-max
+# LLM_TIMEOUT=20s
 
-## Kubernetes Secrets
+# OCR_PROVIDER=myscript
+# OCR_API_KEY=xxxxx
+# OCR_BASE_URL=https://api.myscript.com
+# OCR_TIMEOUT=10s
 
-```bash
-kubectl create secret generic llm-secrets \
-  --from-literal=openai-key=sk-... \
-  --from-literal=azure-key=... \
-  --from-literal=myscript-key=...
+# JOB_QUEUE_SIZE=1000
+# JOB_WORKERS=4
+# ```
 
-kubectl create secret generic ocr-secrets \
-  --from-literal=azure-key=... \
-  --from-literal=myscript-key=...
-```
+# ## Kubernetes Secrets
 
-## Docker Compose
+# ```bash
+# kubectl create secret generic llm-secrets \
+#   --from-literal=openai-key=sk-... \
+#   --from-literal=azure-key=... \
+#   --from-literal=myscript-key=...
 
-```yaml
-version: '3.8'
+# kubectl create secret generic ocr-secrets \
+#   --from-literal=azure-key=... \
+#   --from-literal=myscript-key=...
+# ```
 
-services:
-  aiservice:
-    build: .
-    ports:
-      - "8080:8080"
-    environment:
-      - PORT=8080
-      - ENV=dev
-      - LLM_PROVIDER=openai
-      - LLM_API_KEY=${LLM_API_KEY}
-      - LLM_MODEL=gpt-4-turbo
-      - OCR_PROVIDER=azure
-      - OCR_API_KEY=${OCR_API_KEY}
-      - JOB_WORKERS=2
-    depends_on:
-      - redis
-    networks:
-      - app-network
+# ## Docker Compose
 
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    networks:
-      - app-network
+# ```yaml
+# version: '3.8'
 
-networks:
-  app-network:
-    driver: bridge
-```
+# services:
+#   aiservice:
+#     build: .
+#     ports:
+#       - "8080:8080"
+#     environment:
+#       - PORT=8080
+#       - ENV=dev
+#       - LLM_PROVIDER=openai
+#       - LLM_API_KEY=${LLM_API_KEY}
+#       - LLM_MODEL=gpt-4-turbo
+#       - OCR_PROVIDER=azure
+#       - OCR_API_KEY=${OCR_API_KEY}
+#       - JOB_WORKERS=2
+#     depends_on:
+#       - redis
+#     networks:
+#       - app-network
 
-## Running with different providers
+#   redis:
+#     image: redis:7-alpine
+#     ports:
+#       - "6379:6379"
+#     networks:
+#       - app-network
 
-```bash
-# Development with stubs
-go run cmd/server/main.go
+# networks:
+#   app-network:
+#     driver: bridge
+# ```
 
-# OpenAI + Azure
-export LLM_PROVIDER=openai
-export LLM_API_KEY=sk-...
-export OCR_PROVIDER=azure
-export OCR_API_KEY=...
-go run cmd/server/main.go
+# ## Running with different providers
 
-# Qwen + MyScript
-export LLM_PROVIDER=qwen
-export LLM_API_KEY=...
-export OCR_PROVIDER=myscript
-export OCR_API_KEY=...
-go run cmd/server/main.go
-```
+# ```bash
+# # Development with stubs
+# go run cmd/server/main.go
+
+# # OpenAI + Azure
+# export LLM_PROVIDER=openai
+# export LLM_API_KEY=sk-...
+# export OCR_PROVIDER=azure
+# export OCR_API_KEY=...
+# go run cmd/server/main.go
+
+# # Qwen + MyScript
+# export LLM_PROVIDER=qwen
+# export LLM_API_KEY=...
+# export OCR_PROVIDER=myscript
+# export OCR_API_KEY=...
+# go run cmd/server/main.go
+# ```
