--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,14 +8,15 @@ services:
     ports:
       - "${SERVER_PORT:-8080}:${SERVER_PORT:-8080}"
     environment:
-      - DB_TYPE=${DB_TYPE:-memory}
-      - SQLITE_FILE_PATH=${SQLITE_FILE_PATH:-/app/data/aiservice.db}
+      - DB_TYPE=sqlite
+      - SQLITE_FILE_PATH=/app/data/aiservice.db
+      - ENV=prod
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
     restart: unless-stopped
     extra_hosts:
-      - "host.docker.internal:host-gateway" # позволяет контейнеру обращаться к сервисам на хосте (Linux)
+      - "host.docker.internal:host-gateway" # allows container to reach host services (Linux)
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:${SERVER_PORT:-8080}/health || exit 1"]
       interval: 30s
